--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,9 @@
-.container {
-  margin: 0 auto;
-  max-width: 400px;
+.weather-widget {
   border: 1px solid black;
   border-radius: 5px;
+}
+
+.container {
+  max-width: 400px;
+  margin: 0 auto;
 }
